crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__available_gas__work_with_named_resource_bounds_and_sierra_gas.snap
---
source: tests/integration/single_attributes/available_gas.rs
expression: format_output(&result)
---
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::AvailableGasConfig::MaxResourceBounds(
            snforge_std::_internals::config_types::AvailableResourceBoundsConfig {
                l1_gas: 0x1, l1_data_gas: 0x2, l2_gas: 0x3, sierra_gas: 0x4,
            },
        )
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_available_gas'>(data.span());
        return Default::default();
    };
}
