crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__available_gas__work_with_number_some_set.snap
---
source: tests/integration/single_attributes/available_gas.rs
expression: format_output(&result)
---
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::AvailableGasConfig::MaxResourceBounds(
            snforge_std::_internals::config_types::AvailableResourceBoundsConfig {
                l1_gas: 0x7b, l1_data_gas: 0xffffffffffffffff, l2_gas: 0xffffffffffffffff,
            },
        )
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_available_gas'>(data.span());
        return Default::default();
    };
}
